# mattermost-api-rust

./: .gitignore  Cargo.toml  README.md
src/: http.rs  http_calls.rs  lib.rs  models.rs  websocket.rs  websocket_events.rs
