[package]
name = "mattermost_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.59"
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
futures-util = "0.3.25"
serde_with = {version = "2.1.0", features = ["json"]}
tokio = {version = "1.21.2"}

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
